--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-14T19:21:52.423332Z",
-     "start_time": "2021-02-14T19:21:52.404976Z"
+     "end_time": "2021-02-15T20:34:28.034015Z",
+     "start_time": "2021-02-15T20:34:27.981451Z"
     }
    },
    "outputs": [],
@@ -17,23 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-14T19:28:11.907563Z",
-     "start_time": "2021-02-14T19:28:11.545686Z"
+     "end_time": "2021-02-15T20:37:36.763374Z",
+     "start_time": "2021-02-15T20:37:35.763970Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "197348f0fdcf4aad9e1e5c672a323677",
+       "model_id": "e1c9b278adc043959a4e5244e1aca2cf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "uPlotWidget(status='deferring flush until render')"
+       "VBox(children=(uPlotWidget(status='deferring flush until render'), Text(value='deferring flush until render', …"
       ]
      },
      "metadata": {},
@@ -47,37 +47,101 @@
     "  [1546300800, 1546387200],    # x-values (timestamps)\n",
     "  [        35,         71],    # y-values (series 1)\n",
     "  [        90,         15],    # y-values (series 2)\n",
-    "];\n",
+    "  [        2,         1],    # y-values (series 3)\n",
+    "]\n",
     "\n",
     "opts = {\n",
-    "  'title': \"My Chart\",\n",
-    "  'id': \"chart1\",\n",
-    "  'class': \"my-chart\",\n",
-    "  'width': 800,\n",
-    "  'height': 600,\n",
-    "  'series': [\n",
-    "    {},\n",
-    "    {\n",
-    "      # initial toggled state (optional)\n",
-    "      'show': True,\n",
-    "\n",
-    "      'spanGaps': False,\n",
-    "\n",
-    "      # in-legend display\n",
-    "      'label': \"RAM\",\n",
-    "      'value': '__js_eval:(self, rawValue) => \"$\" + rawValue.toFixed(2)',\n",
-    "\n",
-    "      # series style\n",
-    "      'stroke': \"red\",\n",
-    "      'width': 1,\n",
-    "      'fill': \"rgba(255, 0, 0, 0.3)\",\n",
-    "      'dash': [10, 5],\n",
-    "    }\n",
-    "  ],    \n",
+    "    'title': \"Fixed length / sliding data slices\",\n",
+    "    'width':  800,\n",
+    "    'height': 600,\n",
+    "    'cursor': {\n",
+    "        'drag': {\n",
+    "            'setScale': False,\n",
+    "        }\n",
+    "    },\n",
+    "    'select': {\n",
+    "        'show': False,\n",
+    "    },\n",
+    "    'series': [\n",
+    "        {},\n",
+    "        {\n",
+    "            'label': \"CPU\",\n",
+    "            'scale': \"%\",\n",
+    "            'value': '__js_eval:(u, v) => v == null ? \"-\" : v.toFixed(1) + \"%\"',\n",
+    "            'stroke': \"red\",\n",
+    "        },\n",
+    "        {\n",
+    "            'label': \"RAM\",\n",
+    "            'scale': \"%\",\n",
+    "            'value': '__js_eval:(u, v) => v == null ? \"-\" : v.toFixed(1) + \"%\"',\n",
+    "            'stroke': \"blue\",\n",
+    "        },\n",
+    "        {\n",
+    "            'label': \"TCP Out\",\n",
+    "            'scale': \"mb\",\n",
+    "            'value': '__js_eval:(u, v) => v == null ? \"-\" : v.toFixed(2) + \" MB\"',\n",
+    "            'stroke': \"green\",\n",
+    "        }\n",
+    "    ],\n",
+    "    'axes': [\n",
+    "        {},\n",
+    "        {\n",
+    "            'scale': '%',\n",
+    "            'values': '__js_eval:(u, vals, space) => vals.map(v => +v.toFixed(1) + \"%\")',\n",
+    "        },\n",
+    "        {\n",
+    "            'side': 1,\n",
+    "            'scale': 'mb',\n",
+    "            'values': '__js_eval:(u, vals, space) => vals.map(v => +v.toFixed(2) + \" MB\")',\n",
+    "            'grid': {'show': False},\n",
+    "        },\n",
+    "    ]\n",
+    " \n",
     "}\n",
     "\n",
-    "plot = uPlotWidget(data=data,opts=opts)\n",
-    "display(plot)"
+    "plot = uPlotWidget(\n",
+    "  data=data,\n",
+    "  opts=opts,\n",
+    "  js=\"https://raw.githubusercontent.com/leeoniya/uPlot/1.6.4/dist/uPlot.iife.min.js\",\n",
+    "  css=\"https://raw.githubusercontent.com/leeoniya/uPlot/1.6.4/dist/uPlot.min.css\",\n",
+    "  max_datapoints = None # set to 5 to see a difference\n",
+    ")\n",
+    "display(plot.debugging_display())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-15T20:37:38.427643Z",
+     "start_time": "2021-02-15T20:37:38.349782Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-1' coro=<doit() running at <ipython-input-2-8c92f6c41084>:3>>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def doit():\n",
+    "    for j in range(2):\n",
+    "        data = await plot.get_data_async()        \n",
+    "        for i in range(100):\n",
+    "            plot.push_data([data[0][-1]+1000*i,data[1][-1]+i+100,data[2][-1]+i+100,data[3][-1]+i+100])\n",
+    "            await asyncio.sleep(.1)\n",
+    "        await asyncio.sleep(1)\n",
+    "        \n",
+    "asyncio.get_event_loop().create_task(doit())"
    ]
   }
  ],
@@ -98,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
