Add example that should render by default

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-15T20:37:36.763374Z",
-     "start_time": "2021-02-15T20:37:35.763970Z"
+     "end_time": "2021-02-15T20:43:08.798220Z",
+     "start_time": "2021-02-15T20:43:08.151341Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1c9b278adc043959a4e5244e1aca2cf",
+       "model_id": "1963dd208a6447a3bcc0b11313dd1803",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,22 +110,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-15T20:37:38.427643Z",
-     "start_time": "2021-02-15T20:37:38.349782Z"
+     "end_time": "2021-02-15T20:44:50.243739Z",
+     "start_time": "2021-02-15T20:44:50.228664Z"
+    }
+   },
+   "source": [
+    "The above should look something like this when you run the cell below: ![](video.gif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-15T20:43:24.347742Z",
+     "start_time": "2021-02-15T20:43:24.321971Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Task pending name='Task-1' coro=<doit() running at <ipython-input-2-8c92f6c41084>:3>>"
+       "<Task pending name='Task-2' coro=<doit() running at <ipython-input-4-8c92f6c41084>:3>>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
