Add replace_data and reset demo chart to original data after done

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-15T20:34:28.034015Z",
-     "start_time": "2021-02-15T20:34:27.981451Z"
+     "end_time": "2021-02-15T21:25:06.941347Z",
+     "start_time": "2021-02-15T21:25:06.888319Z"
     }
    },
    "outputs": [],
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-15T20:43:08.798220Z",
-     "start_time": "2021-02-15T20:43:08.151341Z"
+     "end_time": "2021-02-15T21:27:29.367850Z",
+     "start_time": "2021-02-15T21:27:28.259721Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1963dd208a6447a3bcc0b11313dd1803",
+       "model_id": "9d1385f82b99408e8ed36efab05ad806",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,21 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-15T20:43:24.347742Z",
-     "start_time": "2021-02-15T20:43:24.321971Z"
+     "end_time": "2021-02-15T21:31:05.088260Z",
+     "start_time": "2021-02-15T21:31:05.058515Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Task pending name='Task-2' coro=<doit() running at <ipython-input-4-8c92f6c41084>:3>>"
+       "<Task pending name='Task-5' coro=<doit() running at <ipython-input-7-5ec05ac7d9da>:3>>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,15 +145,18 @@
    "source": [
     "import asyncio\n",
     "\n",
-    "async def doit():\n",
+    "async def doit(original_data):\n",
     "    for j in range(2):\n",
     "        data = await plot.get_data_async()        \n",
     "        for i in range(100):\n",
     "            plot.push_data([data[0][-1]+1000*i,data[1][-1]+i+100,data[2][-1]+i+100,data[3][-1]+i+100])\n",
+    "            # Setting the same data twice does not add a new entry\n",
+    "            plot.push_data([data[0][-1]+1000*i,data[1][-1]+i+100,data[2][-1]+i+100,data[3][-1]+i+100])\n",
     "            await asyncio.sleep(.1)\n",
-    "        await asyncio.sleep(1)\n",
+    "    plot.replace_data(original_data)\n",
+    "    \n",
     "        \n",
-    "asyncio.get_event_loop().create_task(doit())"
+    "asyncio.get_event_loop().create_task(doit(data))"
    ]
   }
  ],
