Implement auto_resize parameter

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,13 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-02-15T21:25:06.941347Z",
-     "start_time": "2021-02-15T21:25:06.888319Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -17,29 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-02-15T21:27:29.367850Z",
-     "start_time": "2021-02-15T21:27:28.259721Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d1385f82b99408e8ed36efab05ad806",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(uPlotWidget(status='deferring flush until render'), Text(value='deferring flush until render', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from soso.uplot_jupyter_widget import uPlotWidget\n",
     "\n",
@@ -104,44 +79,24 @@
     "  opts=opts,\n",
     "  js=\"https://raw.githubusercontent.com/leeoniya/uPlot/1.6.4/dist/uPlot.iife.min.js\",\n",
     "  css=\"https://raw.githubusercontent.com/leeoniya/uPlot/1.6.4/dist/uPlot.min.css\",\n",
-    "  max_datapoints = None # set to 5 to see a difference\n",
+    "  max_datapoints = None, # set to 5 to see a difference\n",
+    "  auto_resize=True\n",
     ")\n",
     "display(plot.debugging_display())"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-02-15T20:44:50.243739Z",
-     "start_time": "2021-02-15T20:44:50.228664Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "The above should look something like this when you run the cell below: ![](video.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-02-15T21:31:05.088260Z",
-     "start_time": "2021-02-15T21:31:05.058515Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-5' coro=<doit() running at <ipython-input-7-5ec05ac7d9da>:3>>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "\n",
