Handle more scales than just x/y

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -86,6 +86,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def select_point():\n",
+    "    ret = await plot.select_point()\n",
+    "    print(ret)\n",
+    "    \n",
+    "t1 = asyncio.get_event_loop().create_task(select_point())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
